--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
 DASHSCOPE_API_KEY = ""
+api_key = ""
 DASHSCOPE_BASE_URL = "https://dashscope.aliyuncs.com/compatible-mode/v1"
+base_url = "https://dashscope.aliyuncs.com/compatible-mode/v1"
+LOCAL_BASE_URL = "http://localhost:11434/v1"
+
+LANG_SMITH_API = ""
+TAVILY_API_KEY = ""
